<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.samstudio.pharmadict.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_help"
        android:orderInCategory="2"
        android:title="@string/action_help"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_about"
        android:orderInCategory="3"
        android:title="@string/action_about"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_login"
        android:orderInCategory="4"
        android:title="@string/action_login"
        app:showAsAction="never"/>

</menu>
