<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/close_detail_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <ImageView
            android:id="@+id/close_login_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/nothing"
            android:src="@drawable/left_arrow" />

        <TextView
            android:id="@+id/search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/login" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" >

        <EditText
            android:id="@+id/usernameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/username" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameET"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:password="true" />

        <Button
            android:id="@+id/loginBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordET"
            android:layout_centerHorizontal="true"
            android:text="@string/login" />
    </RelativeLayout>

</RelativeLayout>