<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/top_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/close_detail_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" >

                <ImageView
                    android:id="@+id/close_detail_iv"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/nothing"
                    android:src="@drawable/left_arrow" />

                <TextView
                    android:id="@+id/search_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/obat_detail" />
            </LinearLayout>
            
            <View
                android:id="@+id/kodeV"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/circle_green" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/picIV"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/nothing"
            android:scaleType="centerCrop"
            android:src="@drawable/default_image" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:id="@+id/null_view"
                android:layout_width="match_parent"
                android:layout_height="310dp"
                android:layout_marginBottom="5dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" >

                <TextView
                    android:id="@+id/namaTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/description"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/deskripsiTV"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="2" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/indication"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/indikasiTV"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="2" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/type"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/jenisTV"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="2" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/price"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/hargaTV"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="2" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/side_effect"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/efeksampingTV"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="2" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/dosage"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dosisTV"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="2" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/warning"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/perhatianTV"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="2" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/content"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/isiTV"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="2" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>