<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/close_input_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/close_input_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/nothing"
            android:src="@drawable/left_arrow" />

        <TextView
            android:id="@+id/search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/input_obat" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/nama_obat_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Nama obat" />

            <EditText
                android:id="@+id/deskripsiObatET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Deskripsi obat" />

            <EditText
                android:id="@+id/indikasiObatET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Indikasi obat" />

            <Spinner
                android:id="@+id/jenisObatSP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:entries="@array/jenis_obat"
                android:hint="Jenis obat" />

            <EditText
                android:id="@+id/hargaObatET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Harga obat" />

            <EditText
                android:id="@+id/efek_samping_obat_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Efek samping obat" />

            <EditText
                android:id="@+id/dosis_obat_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Dosis obat" />

            <EditText
                android:id="@+id/perhatian_obat_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Perhatian obat" />

            <EditText
                android:id="@+id/isi_obat_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Isi obat" />

            <RadioGroup
                android:id="@+id/kode_obat_RG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/kode_obat_ringan_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/light" />

                <RadioButton
                    android:id="@+id/kode_obat_sedang_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium" />

                <RadioButton
                    android:id="@+id/kode_obat_keras_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hard" />
            </RadioGroup>

            <Button
                android:id="@+id/inputBT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Submit"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>